package com.example.oulearning.training.domain;


public enum TrainingPurposeType {
    INDIVIDUAL_DEVELOPMENT_PLAN,
    DEPARTMENT_GOALS,
    OTHER
}
